# garmin-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CREDITS.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_dashboard.py
.cursor/rules/: lint-after-changes.mdc
.github/: workflow.yml
.github/workflows/: ci.yml
apps/api/garmin_api/: __init__.py
apps/dashboard/garmin_dashboard/: __main__.py  app.py
config/: activity_type_mappings.json
docs/: activity_type_mappings.md  garmin_connect_integration.md  imputation_strategies.md
examples/: activity_calendar_example.py  daily_update.sh
notebooks/: analysis.ipynb  day_of_week_analysis.ipynb  hr_daily.ipynb  stress_time_of_day_analysis.ipynb
src/: __init__.py  activity_sleep_stress_analysis.py  check_missing_data.py  inspect_sqlite_schema.py  key_metrics.py  load_all_garmin_dbs.py  logging_config.py  merge_daily_data.py  plot_trends.py  plot_trends_range.py  preview.py  sleep_predictor.py  summary_stats.py  utils.py  utils_cleaning.py
src/dashboard/: app.py
src/data_ingestion/: inspect_sqlite_schema.py  load_all_garmin_dbs.py  merge_all_daily_data.py  prepare_modeling_dataset.py
src/features/: check_missing_data.py  data_quality_analysis.py  merge_daily_data.py  quick_data_check.py  summary_stats.py
src/garmin_analysis/: cli_day_of_week.py  cli_export.py  cli_garmin_sync.py  cli_init.py  cli_main.py  cli_optimal_sleep.py  cli_time_of_day_stress.py  cli_weekly_report.py  config.py  utils.py  utils_cleaning.py
src/garmin_analysis/dashboard/: app.py
src/garmin_analysis/data_ingestion/: export_master.py  garmin_connect_sync.py  inspect_sqlite_schema.py  load_all_garmin_dbs.py  prepare_modeling_dataset.py
src/garmin_analysis/features/: check_missing_data.py  coverage.py  daily_data_quality.py  data_quality_analysis.py  day_of_week_analysis.py  optimal_sleep_activity_ranges.py  quick_data_check.py  summary_stats.py  time_of_day_stress_analysis.py
src/garmin_analysis/modeling/: activity_sleep_stress_analysis.py  anomaly_detection.py  clustering_behavior.py  comprehensive_modeling_pipeline.py  enhanced_anomaly_detection.py  enhanced_clustering.py  hr_activity_sleep_model.py  predictive_modeling.py
src/garmin_analysis/reporting/: generate_trend_summary.py  generate_weekly_report.py  run_all_analytics.py
src/garmin_analysis/utils/: __init__.py  activity_mappings.py  cleaning.py  cli_helpers.py  data_filtering.py  data_loading.py  data_processing.py  error_handling.py  imputation.py
src/garmin_analysis/viz/: __init__.py  cli_activity_calendar.py  plot_activity_calendar.py  plot_feature_correlation.py  plot_feature_trend.py  plot_trends_range.py
src/modeling/: activity_sleep_stress_analysis.py  anomaly_detection.py  clustering_behavior.py  comprehensive_modeling_pipeline.py  enhanced_anomaly_detection.py  enhanced_clustering.py  predictive_modeling.py  sleep_predictor.py
src/reporting/: generate_trend_summary.py  run_all_analytics.py
src/viz/: plot_feature_correlation.py  plot_feature_trend.py  plot_trends_range.py
tests/: conftest.py  test_adversarial.py  test_check_missing_data.py  test_cli_export.py  test_cli_helpers.py  test_cli_init.py  test_cli_main.py  test_comprehensive_modeling_pipeline.py  test_coverage.py  test_coverage_filtering.py  test_daily_data_quality.py  test_dashboard_data_quality.py  test_dashboard_dependencies.py  test_dashboard_integration.py  test_data_filtering.py  test_data_loading.py  test_data_quality.py  test_date_normalization_refactoring.py  test_day_of_week_analysis.py  test_error_handling.py  test_export_master.py  test_garmin_connect_sync.py  test_generate_trend_summary.py  test_generate_weekly_report.py  test_hr_activity_sleep_model.py  test_imputation.py  test_inspect_sqlite_schema.py  test_load_all_garmin_dbs.py  test_merge_all_daily_data.py  test_merge_daily_data.py  test_notebooks.py  test_optimal_sleep_activity_ranges.py  test_plot_activity_calendar.py  test_plot_trends_range.py  test_prepare_modeling_dataset.py  test_run_all_analytics.py  test_schema_drift.py  test_time_conversion_refactoring.py  test_time_of_day_stress_analysis.py  test_utils.py  (+1 more)
