[project]
name = "garmin_analysis"
version = "0.1.0"
description = "A comprehensive Garmin health data analysis platform with interactive dashboard, machine learning capabilities, and automated reporting."
authors = [
    { name = "Chang-Hyun Mungai", email = "changhyunmungai@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
  # pin to wheel-friendly versions to avoid numba/llvmlite compiles
  "numpy>=1.24,<1.27",
  "pandas",
  "seaborn",
  "tabulate",
  "dash",
  "plotly",
  "notebook>=7.4.3",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.3",
  "scikit-learn>=1.4.2",
  "tsfresh",
  "statsmodels",
  "prophet",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
