[project]
name = "garmin_analysis"
version = "0.1.0"
description = "A comprehensive Garmin health data analysis platform with interactive dashboard, machine learning capabilities, and automated reporting."
authors = [
    { name = "Chang-Hyun Mungai", email = "changhyunmungai@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
  # pin to wheel-friendly versions to avoid numba/llvmlite compiles
  "numpy>=1.24,<1.27",
  "pandas",
  "seaborn",
  "tabulate",
  "dash",
  "plotly",
  "notebook>=7.4.3",
  "ipykernel>=6.29.5",
  "matplotlib>=3.10.3",
  "scikit-learn>=1.4.2",
  "tsfresh",
  "statsmodels",
  "prophet",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "nbconvert>=7.0.0",
    "nbformat>=5.0.0",
    "ruff",
    "pre-commit",
]

[project.scripts]
garmin-weekly-report = "garmin_analysis.cli_weekly_report:main"
garmin-day-of-week = "garmin_analysis.cli_day_of_week:main"
garmin-stress-by-time = "garmin_analysis.cli_time_of_day_stress:main"
garmin-sync = "garmin_analysis.cli_garmin_sync:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
nbconvert = "^7.0.0"
nbformat = "^5.0.0"
ruff = "*"
pre-commit = "*"

[tool.ruff]
target-version = "py311"
line-length = 100
src = [
    "src",
    "tests",
]
include = [
    "run_dashboard.py",
    "src/garmin_analysis/cli_*.py",
    "src/garmin_analysis/viz/cli_*.py",
]
extend-exclude = [
    "notebooks",
]

[tool.ruff.lint]
select = [
    "I",
]

